--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 400; 
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -22,13 +22,18 @@ a:hover {
   color: #535bf2;
 }
 
+/* html,
+body {
+  overflow-x: hidden;
+} */
+
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
+
 
 h1 {
   font-size: 3.2em;
