--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,13 @@ a:hover {
   color: #535bf2;
 }
 
-/* html,
-body {
-  overflow-x: hidden;
-} */
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
 
 
 body {
